[package]
name = "conlang-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Templates
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
# We use 0.29 because the older store requires it. It is rock solid.
rusqlite = { version = "0.29.0", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
time = "0.3"

# Sessions (The 0.12 Stack)
# This specific pair is guaranteed to share the same 'core' version.
tower-sessions = "0.12.1"
tower-sessions-rusqlite-store = "0.10.0"
